trigger the create backup job

--- a/.github/workflows/ldap-remove-user-passwords.yaml
+++ b/.github/workflows/ldap-remove-user-passwords.yaml
@@ -13,8 +13,18 @@ on:
            - "preprod"
 
 jobs:
+  create-backup:
+    name: Create LDAP EFS Backup in ${{ inputs.environment }}
+    uses: ./.github/workflows/ldap-on-demand-bkp.yml
+    with:
+      environment: ${{ inputs.environment }}
+    secrets:
+      PWO_PUBLIC_SLACK_WEBHOOK_URL: ${{ secrets.PWO_PUBLIC_SLACK_WEBHOOK_URL }}
+
   deploy:
     name: Create ECS Task in delius-core ${{ inputs.environment }}
+    needs:
+      - create-backup
     runs-on: ubuntu-latest
     environment: delius-core-${{ inputs.environment }}-preapproved
     permissions:
