--- a/.github/workflows/ldap-remove-user-passwords.yaml
+++ b/.github/workflows/ldap-remove-user-passwords.yaml
@@ -1,17 +1,11 @@
 name: "LDAP: User Expiry"
 on:
-   workflow_dispatch:
+   workflow_call:
      inputs:
        environment:
          description: "The environment to run the task in"
          required: true
-         type: choice
-         options:
-           - "dev"
-           - "test"
-           - "stage"
-           - "preprod"
-
+         type: string
 jobs:
   create-backup:
     name: Create LDAP EFS Backup in ${{ inputs.environment }}
