Moved -preapproved flag to the correct place

--- a/.github/workflows/ldap-rbac-uplift.yml
+++ b/.github/workflows/ldap-rbac-uplift.yml
@@ -16,7 +16,7 @@ jobs:
     deploy:
         name: Create ECS Task in delius-core ${{ github.event.inputs.environment }}-preapproved
         runs-on: ubuntu-latest
-        environment: delius-core-${{ github.event.inputs.environment }}
+        environment: delius-core-${{ github.event.inputs.environment }}-preapproved
         permissions:
           id-token: write
         steps:
