Pass ENVIRONMENT_NAME environment variable

--- a/playbooks/oracle_duplicate/rman-duplicate.yml
+++ b/playbooks/oracle_duplicate/rman-duplicate.yml
@@ -148,6 +148,7 @@
             executable: /bin/bash
           environment:
             OEM_SECRET_ROLE: "{{ oem_secret_role }}"
+            ENVIRONMENT_NAME: "{{ environment_name }}"
           register: duplicate_cmd_output
 
         - name: Report Run Output
