--- a/.github/workflows/oracle-db-duplicate.yml
+++ b/.github/workflows/oracle-db-duplicate.yml
@@ -8,6 +8,7 @@ on:
         required: true
         type: choice
         options:
+          - "delius-core-dev"
           - "delius-core-test"
           - "delius-core-stage"
           - "delius-core-pre-prod"
