--- a/.github/workflows/oracle-db-patch-report.yml
+++ b/.github/workflows/oracle-db-patch-report.yml
@@ -27,8 +27,7 @@ permissions:
   id-token: write
 
 jobs:
-  deployment:
-    environment: "delius-core-dev"
+  prepare-run:
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.41.0
@@ -68,9 +67,21 @@ jobs:
           role-session-name: "hmpps-delius-operational-automation-${{ github.run_number }}"
           aws-region: "eu-west-2"
 
+  run-report:
+    runs-on: ubuntu-latest
+    environment: delius-core-dev
+    container:
+      image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.41.0
+    timeout-minutes: 1440
+    continue-on-error: false
+    steps:
       - name: Run Patch Report Playbook
         run: |
           export ANSIBLE_CONFIG=$ansible_config
           hosts="environment_name_$(echo "delius-core-dev" | sed 's/delius-core-dev/delius_core_development_dev/;s/delius-core-test/delius_core_test_test/;s/delius-core-training/delius_core_test_training/;s/delius-core-stage/delius_core_preproduction_stage/;s/delius-core-pre-prod/delius_core_preproduction_pre_prod/;s/delius-core-prod/delius_core_production_prod/')_delius_primarydb"
           $command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} \
           -e target_hosts=$hosts
+
+
+
+
