--- a/.github/workflows/oracle-db-patch-report.yml
+++ b/.github/workflows/oracle-db-patch-report.yml
@@ -1,9 +1,6 @@
 name: "Oracle: Patch Report"
 run-name: "Oracle: Patch Report"
 on:
-  push:
-    branches:
-      - DBA-678-2
   workflow_dispatch:
     inputs:
       SourceCodeVersion:
@@ -29,7 +26,12 @@ permissions:
 jobs:
   run-report:
     runs-on: ubuntu-latest
-    environment: delius-core-dev
+    strategy:
+      matrix:
+        environment: 
+          - delius-core-dev
+          - delius-core-test
+    environment: ${{ matrix.environment }}-preapproved
     container:
       image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.41.0
     timeout-minutes: 1440
@@ -71,7 +73,7 @@ jobs:
       - name: Run Patch Report Playbook
         run: |
           export ANSIBLE_CONFIG=$ansible_config
-          hosts="environment_name_$(echo "delius-core-dev" | sed 's/delius-core-dev/delius_core_development_dev/;s/delius-core-test/delius_core_test_test/;s/delius-core-training/delius_core_test_training/;s/delius-core-stage/delius_core_preproduction_stage/;s/delius-core-pre-prod/delius_core_preproduction_pre_prod/;s/delius-core-prod/delius_core_production_prod/')_delius_primarydb"
+          hosts="environment_name_$(echo "delius-core-dev" | sed 's/delius-core-dev/delius_core_development_dev/;s/delius-core-test/delius_core_test_test/;s/delius-core-training/delius_core_test_training/;s/delius-core-stage/delius_core_preproduction_stage/;s/delius-core-pre-prod/delius_core_preproduction_pre_prod/;s/delius-core-prod/delius_core_production_prod/')_delius_dbs"
           $command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} \
           -e target_hosts=$hosts
 
