--- a/.github/workflows/oracle-db-patch-report.yml
+++ b/.github/workflows/oracle-db-patch-report.yml
@@ -28,6 +28,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
+      max-parallel: 1
       matrix:
         environment: 
           - delius-core-dev
