--- a/playbooks/oracle_patch_report/oracle_patch_report/defaults/main.yml
+++ b/playbooks/oracle_patch_report/oracle_patch_report/defaults/main.yml
@@ -1,3 +1,10 @@
+oem_secretsmanager_passwords:
+  emrep:
+    account_name: "hmpps-oem-{{ aws_environment }}"
+    assume_role_name: "EC2OracleEnterpriseManagementSecretsRole"
+    secret: "/oracle/database/EMREP/shared-passwords"
+    users:
+      - sysman:
 emojis:
     Grid: ':rubiks_cube::empty_background:'
     Database: ':empty_background::database:'
