--- a/playbooks/oracle_patch_report/oracle_patch_report/tasks/main.yml
+++ b/playbooks/oracle_patch_report/oracle_patch_report/tasks/main.yml
@@ -120,7 +120,9 @@
 
 - name: Get Slack Token
   include_tasks: "{{ playbook_dir }}/../../common/tasks/get_facts.yml"
-  run_once: true
+  args:
+     apply:
+        run_once: true
 
 - name: Show Fact
   debug:
