--- a/.github/workflows/oracle-db-patch-report.yml
+++ b/.github/workflows/oracle-db-patch-report.yml
@@ -33,6 +33,7 @@ jobs:
         environment: 
           - delius-core-dev
           - delius-core-test
+          - delius-mis-dev
     environment: ${{ matrix.environment }}-preapproved
     container:
       image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.41.0
@@ -91,10 +92,6 @@ jobs:
           export ANSIBLE_CONFIG=$ansible_config
           # Link the checked out configuration roles to somewhere Ansible will be able to find them
           ln -s $PWD/roles/ansible/roles $PWD/operations/playbooks/oracle_patch_report/roles
-          hosts="environment_name_$(echo ${{ matrix.environment }} | sed 's/delius-core-dev/delius_core_development_dev/;s/delius-core-test/delius_core_test_test/;s/delius-core-training/delius_core_test_training/;s/delius-core-stage/delius_core_preproduction_stage/;s/delius-core-pre-prod/delius_core_preproduction_pre_prod/;s/delius-core-prod/delius_core_production_prod/')_delius_dbs"
+          hosts="environment_name_$(echo ${{ matrix.environment }} | sed -E 's/delius-(core|mis)-(dev)/delius_\1_development_\2/;s/delius-(core|mis)-(test|training)/delius_\1_test_\2/;s/delius-(core|mis)-(stage|pre-prod)/delius_\1_preproduction_\2/;s/delius-(core|mis)-(prod)/delius_\1_production_\2/')_all"
           $command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} \
           -e target_hosts=$hosts
-
-
-
-
