Separate out MIS applications

--- a/playbooks/oracle_patch_report/oracle_patch_report/defaults/main.yml
+++ b/playbooks/oracle_patch_report/oracle_patch_report/defaults/main.yml
@@ -10,3 +10,4 @@ emojis:
     Database: ':empty_background::database:'
     Both: ':rubiks_cube::database:'
     None: ':empty_background::empty_background:'
+slack_channel: "#delius-aws-oracle-dev-alerts-test"
