--- a/.github/workflows/oracle-db-patch-report.yml
+++ b/.github/workflows/oracle-db-patch-report.yml
@@ -31,9 +31,16 @@ jobs:
       max-parallel: 1
       matrix:
         environment: 
-          - delius-core-dev
-          - delius-core-test
           - delius-mis-dev
+        application:
+          - mis
+          - dsd
+          - boe
+        include:
+          - environment: delius-core-dev
+            application: delius
+          - environment: delius-core-test
+            application: delius
     environment: ${{ matrix.environment }}-preapproved
     container:
       image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.41.0
@@ -92,6 +99,6 @@ jobs:
           export ANSIBLE_CONFIG=$ansible_config
           # Link the checked out configuration roles to somewhere Ansible will be able to find them
           ln -s $PWD/roles/ansible/roles $PWD/operations/playbooks/oracle_patch_report/roles
-          hosts="environment_name_$(echo ${{ matrix.environment }} | sed -E 's/delius-(core|mis)-(dev)/delius_\1_development_\2/;s/delius-(core|mis)-(test|training)/delius_\1_test_\2/;s/delius-(core|mis)-(stage|pre-prod)/delius_\1_preproduction_\2/;s/delius-(core|mis)-(prod)/delius_\1_production_\2/')_all"
+          hosts="environment_name_$(echo ${{ matrix.environment }} | sed -E 's/delius-(core|mis)-(dev)/delius_\1_development_\2/;s/delius-(core|mis)-(test|training)/delius_\1_test_\2/;s/delius-(core|mis)-(stage|pre-prod)/delius_\1_preproduction_\2/;s/delius-(core|mis)-(prod)/delius_\1_production_\2/')_${{ matrix.application }}_dbs"
           $command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} \
           -e target_hosts=$hosts
