Add mis dev environment and dsd target

--- a/.github/workflows/oracle-db-duplicate.yml
+++ b/.github/workflows/oracle-db-duplicate.yml
@@ -19,6 +19,7 @@ on:
         options:
           - "delius_primarydb"
           - "mis_primarydb"
+          - "dsd_primarydb"
       SourceLegacy:
         description: "Duplicate From AWS Legacy"
         type: choice
