--- a/.github/workflows/oracle-db-oem-blackout.yml
+++ b/.github/workflows/oracle-db-oem-blackout.yml
@@ -14,6 +14,10 @@ on:
           - "delius-core-stage"
           - "delius-core-pre-prod"
           - "delius-core-prod"
+          - "delius-mis-dev"
+          - "delius-mis-stage"
+          - "delius-mis-pre-prod"
+          - "delius-mis-prod"
       TargetHost:
         description: "Database target host"
         required: true
@@ -24,14 +28,14 @@ on:
           - "delius_standbydb2"
           - "mis_primarydb"
           - "mis_standbydb1"
-          - "misboe_primarydb"
-          - "misboe_standbydb1"
-          - "misdsd_primarydb"
-          - "misdsd_standbydb1"
+          - "boe_primarydb"
+          - "boe_standbydb1"
+          - "dsd_primarydb"
+          - "dsd_standbydb1"
           - "delius_dbs"
           - "mis_dbs"
-          - "misboe_dbs"
-          - "misdsd_dbs"
+          - "boe_dbs"
+          - "dsd_dbs"
       ObjectTypes:
         description: "Oracle target type"
         type: choice
@@ -98,8 +102,8 @@ jobs:
 
       - name: Prepare Target Name
         id: preparetargetname
-        run: echo TargetHost="environment_name_$(echo ${{ github.event.inputs.TargetEnvironment }} | sed 's/delius-core-dev/delius_core_development_dev/;s/delius-core-test/delius_core_test_test/;s/delius-core-training/delius_core_test_training/;s/delius-core-stage/delius_core_preproduction_stage/;s/delius-core-pre-prod/delius_core_preproduction_pre_prod/;s/delius-core-prod/delius_core_production_prod/')_${{ github.event.inputs.TargetHost }}" >> $GITHUB_OUTPUT
-
+        run: echo TargetHost="environment_name_$(echo ${{ github.event.inputs.TargetEnvironment }} | sed 's/dev/development_dev/;s/test/test_test/;s/training/test_training/;s/stage/preproduction_stage/;s/pre-prod/preproduction_pre_prod/;s/-prod/_production_prod/;s/-/_/g')_${{ github.event.inputs.TargetHost }}" >> $GITHUB_OUTPUT
+        
       - name: Checkout From hmpps-delius-operational-automation
         uses: actions/checkout@v4
         with:
