--- a/.github/workflows/oracle-db-password-rotation.yml
+++ b/.github/workflows/oracle-db-password-rotation.yml
@@ -18,6 +18,10 @@ on:
           - "delius-core-stage"
           - "delius-core-pre-prod"
           - "delius-core-prod"
+          - "delius-mis-dev"
+          - "delius-mis-stage"
+          - "delius-mis-pre-prod"
+          - "delius-mis-prod"
       VerboseOutput:
         description: "Verbose Output level"
         type: choice
@@ -114,7 +118,12 @@ jobs:
         working-directory: ${{ env.inventory }}
         run: |
           targets=""
-          prefix="environment_name_$(echo ${{ github.event.inputs.TargetEnvironment}} | sed 's/delius-core-dev/delius_core_development_dev/;s/delius-core-test/delius_core_test_test/;s/delius-core-training/delius_core_test_training/;s/delius-core-stage/delius_core_preproduction_stage/;s/delius-core-pre-prod/delius_core_preproduction_pre_prod/;s/delius-core-prod/delius_core_production_prod/;s/-/_/g')"
+          if [[ ! "${env}" =~ oem ]]
+          then
+            prefix="environment_name_$(echo ${{ github.event.inputs.TargetEnvironment }} | sed 's/dev/development_dev/;s/test/test_test/;s/training/test_training/;s/stage/preproduction_stage/;s/pre-prod/preproduction_pre_prod/;s/-prod/_production_prod/;s/-/_/g')"
+          else
+            prefix="environment_name_$(echo ${{ github.event.inputs.TargetEnvironment }} | sed 's/-/_/g' }}"
+          fi
           build_targets() {
             databasetype=${1}
             if [[ -e group_vars/${prefix}_${databasetype}_primarydb.yml ]]
@@ -128,8 +137,8 @@ jobs:
           }
           build_targets delius
           build_targets mis
-          build_targets misboe
-          build_targets misdsd
+          build_targets boe
+          build_targets dsd
           build_targets oem
           echo "targets=$targets"
           echo "targets=$targets" >> $GITHUB_OUTPUT
