--- a/.github/workflows/oracle-db-validate-backups.yml
+++ b/.github/workflows/oracle-db-validate-backups.yml
@@ -21,12 +21,12 @@ on:
         options: 
           - "delius_primarydb"
           - "mis_primarydb"
-          - "misboe_primarydb"
-          - "misdsd_primarydb"
+          - "boe_primarydb"
+          - "dsd_primarydb"
           - "delius_standbydb1"
           - "mis_standbydb1"
-          - "misboe_standbydb1"
-          - "misdsd_standbydb1"
+          - "boe_standbydb1"
+          - "dsd_standbydb1"
           - "delius_standbydb2"
           - "Random Delius Standby"
       RestoreDatetime:
@@ -136,7 +136,7 @@ jobs:
             TargetHost="${{ inputs.TargetHost }}"
             TargetEnvironment="${{ inputs.TargetEnvironment }}"
           fi;
-          RmanTarget="environment_name_$(echo $TargetEnvironment | sed 's/delius-core-dev/delius_core_development_dev/;s/delius-core-test/delius_core_test_test/;s/delius-core-training/delius_core_test_training/;s/delius-core-stage/delius_core_preproduction_stage/;s/delius-core-pre-prod/delius_core_preproduction_pre_prod/;s/delius-core-prod/delius_core_production_prod/')_$TargetHost"
+          RmanTarget="environment_name_$(echo $TargetEnvironment | sed 's/dev/development_dev/;s/test/test_test/;s/training/test_training/;s/stage/preproduction_stage/;s/pre-prod/preproduction_pre_prod/;s/-prod/_production_prod/;s/-/_/g')_$TargetHost"
           echo "RmanTarget=$RmanTarget" >> $GITHUB_OUTPUT
           echo "TargetEnvironment=$TargetEnvironment" >> $GITHUB_OUTPUT
           
