--- a/.github/workflows/oracle-db-oem-agent-setup.yml
+++ b/.github/workflows/oracle-db-oem-agent-setup.yml
@@ -12,7 +12,7 @@ on:
           - "delius-core-test"
           - "delius-core-training"
           - "delius-core-stage"
-          - "delius-core-pre-prod"
+          - "delius-core-preprod"
           - "delius-core-prod"
           - "delius-mis-dev"
       TargetHost:
