--- a/.github/workflows/oracle-db-password-rotation.yml
+++ b/.github/workflows/oracle-db-password-rotation.yml
@@ -16,11 +16,11 @@ on:
           - "delius-core-test"
           - "delius-core-training"
           - "delius-core-stage"
-          - "delius-core-pre-prod"
+          - "delius-core-preprod"
           - "delius-core-prod"
           - "delius-mis-dev"
           - "delius-mis-stage"
-          - "delius-mis-pre-prod"
+          - "delius-mis-preprod"
           - "delius-mis-prod"
       VerboseOutput:
         description: "Verbose Output level"
@@ -152,7 +152,7 @@ jobs:
               TargetOemEnvironment=hmpps-oem-test
               TargetEnvironmentName=delius-core-test
               ;;
-            delius-core-stage|delius-core-pre-prod)
+            delius-core-stage|delius-core-preprod)
               TargetOemEnvironment=hmpps-oem-preproduction
               TargetEnvironmentName=delius-core-preproduction
               ;;
