--- a/.github/workflows/oracle-db-licence-audit.yml
+++ b/.github/workflows/oracle-db-licence-audit.yml
@@ -34,7 +34,7 @@ jobs:
       max-parallel: 1
       matrix:
         environment: [delius-core-dev,delius-core-test,delius-mis-dev]
-    #,delius-core-training,delius-core-stage,delius-core-pre-prod,delius-core-prod,delius-mis-stage,delius-mis-pre-prod,delius-mis-prod
+    #,delius-core-training,delius-core-stage,delius-core-preprod,delius-core-prod,delius-mis-stage,delius-mis-preprod,delius-mis-prod
     environment: ${{ matrix.environment }}-preapproved
     timeout-minutes: 1440
     continue-on-error: true
