--- a/.github/workflows/oracle-db-support-awr-reports.yml
+++ b/.github/workflows/oracle-db-support-awr-reports.yml
@@ -9,7 +9,7 @@ on:
         type: choice
         options:
           - "delius-core-dev"
-          - "delius-core-pre-prod"
+          - "delius-core-preprod"
           - "delius-core-prod"
       TargetHosts:
         description: "Database target hosts"
@@ -48,7 +48,7 @@ jobs:
       - name: Prepare Delius Inventory Name
         id: prepareinventoryname
         run: |
-          target_hosts="environment_name_$(echo ${{ github.event.inputs.TargetEnvironment }} | sed 's/delius-core-dev/delius_core_development_dev/;s/delius-core-test/delius_core_test_test/;s/delius-core-training/delius_core_test_training/;s/delius-core-stage/delius_core_preproduction_stage/;s/delius-core-pre-prod/delius_core_preproduction_pre_prod/;s/delius-core-prod/delius_core_production_prod/')_${{ github.event.inputs.TargetHosts }}"
+          target_hosts="environment_name_$(echo ${{ github.event.inputs.TargetEnvironment }} | sed 's/delius-core-dev/delius_core_development_dev/;s/delius-core-test/delius_core_test_test/;s/delius-core-training/delius_core_test_training/;s/delius-core-stage/delius_core_preproduction_stage/;s/delius-core-preprod/delius_core_preproduction_preprod/;s/delius-core-prod/delius_core_production_prod/')_${{ github.event.inputs.TargetHosts }}"
           echo "target_hosts=${target_hosts}" >> $GITHUB_OUTPUT
 
       - name: Checkout Inventory From modernisation-platform-configuration-management
