--- a/.github/workflows/gdpr-data-refresh.yaml
+++ b/.github/workflows/gdpr-data-refresh.yaml
@@ -57,7 +57,7 @@
             uses: aws-actions/configure-aws-credentials@e3dd6a429d7300a6a4c196c26e071d42e0343502 # v4.0.2
             with:
               role-to-assume: "arn:aws:iam::${{ vars.AWS_ACCOUNT_ID }}:role/modernisation-platform-oidc-cicd"
-              role-session-name: "gdpr-data-refresh-${{ github.run_number }}"
+              role-session-name: "${{ inputs.rds_instance }}-data-refresh-${{ github.run_number }}"
               aws-region: "eu-west-2"
     
           - name: Get latest overnight backup
